# deepin-remote-desktop

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  README.md  meson.build
.codex/: AGENTS.md
.codex/plan/: architecture-audit.md  contributor-guide.md  gsocket-listener.md  rdp-reconnect.md  release-build.md  rfx-progressive-vs-surfacebit.md  system-handover.md
config/: default-handover.ini  default.ini  full-example.ini
data/: deepin-remote-desktop-handover.service  meson.build
data/config.d/: default-handover.ini  default-pam-system.ini  default-system.ini  default-user.ini  full-example.ini
doc/: TODO.md  architecture.md  changelog.md  collect_dirty_rects.md  plan_task_log.md  record.md  task-qt-core-entry.md  task-qt-migration-plan.md  task-qt-scaffold.md  远程桌面概要设计.typ
doc/uml/: Rdpgfx_ACK.md  deepin-remote-desktop.puml  deepin-remote-structure.puml  desktop-share.puml  key-data-structures.puml  remote-greeter-login.puml  remote-sso-login.puml
plan-doc/: RDSTLS.md  clipboard-plan.md  handshake-configs.md  libfreerdp-server.md  mac.md  rdpgfx-pipeline.md
qt/: CMakeLists.txt  README.md  main.cpp  meson.build  test_application.cpp
qt/capture/: drd_capture_manager.cpp  drd_capture_manager.h  drd_x11_capture.cpp  drd_x11_capture.h
qt/core/: drd_application.cpp  drd_application.h  drd_config.cpp  drd_config.h  drd_dbus_constants.cpp  drd_dbus_constants.h  drd_encoding_options.cpp  drd_encoding_options.h  drd_runtime.cpp  drd_runtime.h  drd_server_runtime.cpp  drd_server_runtime.h
qt/data/: deepin-remote-desktop-handover.service  deepin-remote-desktop-system.service  deepin-remote-desktop-user.service  meson.build  org.deepin.RemoteDesktop.conf
qt/data/certs/: server.crt
qt/data/config.d/: default-system.ini  default-user.ini
qt/debian/: control  debhelper-build-stamp  deepin-remote-desktop.install  deepin-remote-desktop.postinst.debhelper  deepin-remote-desktop.postrm.debhelper  deepin-remote-desktop.substvars  files  rules
qt/debian/.debhelper/deepin-remote-desktop/: dbgsym-build-ids
qt/debian/.debhelper/deepin-remote-desktop/dbgsym-root/DEBIAN/: control  md5sums
qt/debian/.debhelper/deepin-remote-desktop/dbgsym-root/usr/share/doc/: deepin-remote-desktop-dbgsym
qt/debian/deepin-remote-desktop/DEBIAN/: conffiles  control  md5sums  postinst  postrm  preinst
qt/debian/deepin-remote-desktop/etc/deepin/greeters.d/: 11-deepin-remote-desktop-handover
qt/debian/deepin-remote-desktop/usr/lib/systemd/user/: deepin-remote-desktop-user.service
qt/debian/deepin-remote-desktop/usr/share/deepin-remote-desktop/config.d/: default-handover.ini
qt/debian/tmp/usr/share/deepin-remote-desktop/certs/: server.key
qt/debian/tmp/usr/share/deepin-remote-desktop/config.d/: full-example.ini
qt/encoding/: drd_encoding_manager.cpp  drd_encoding_manager.h
qt/input/: drd_input_dispatcher.cpp  drd_input_dispatcher.h  drd_x11_input.cpp  drd_x11_input.h
qt/security/: drd_local_session.cpp  drd_local_session.h  drd_nla_sam.cpp  drd_nla_sam.h  drd_security.cpp  drd_security.h  drd_tls_credentials.cpp  drd_tls_credentials.h
qt/session/: drd_rdp_graphics_pipeline.cpp  drd_rdp_graphics_pipeline.h  drd_rdp_session.cpp  drd_rdp_session.h  drd_session.cpp  drd_session.h
qt/system/: drd_handover_daemon.cpp  drd_handover_daemon.h  drd_system.cpp  drd_system.h  drd_system_daemon.cpp  drd_system_daemon.h
qt/transport/: drd_rdp_listener.cpp  drd_rdp_listener.h  drd_transport.cpp  drd_transport.h
qt/utils/: drd_frame.cpp  drd_frame.h  drd_frame_queue.cpp  drd_frame_queue.h  drd_log.cpp  drd_log.h
src/: AGENTS.md  main.c  main.cpp  meson.build  org.deepin.DisplayManager.xml  org.deepin.RemoteDesktop.new.xml  org.deepin.RemoteDesktop.xml  org.freedesktop.login1.xml
src/capture/: AGENTS.md  drd_capture_manager.c  drd_capture_manager.h  drd_x11_capture.c  drd_x11_capture.h  grdc_capture_manager.c  grdc_capture_manager.h  grdc_x11_capture.c  grdc_x11_capture.h
src/core/: AGENTS.md  CLAUDE.md  drd_application.c  drd_application.h  drd_config.c  drd_config.h  drd_dbus_constants.h  drd_encoding_options.h  drd_server_runtime.c  drd_server_runtime.h  grdc_application.c  grdc_application.h  grdc_config.c  grdc_config.h  grdc_encoding_options.h  grdc_server_runtime.c  grdc_server_runtime.h
src/encoding/: AGENTS.md  drd_encoding_manager.c  drd_encoding_manager.h  drd_raw_encoder.c  drd_raw_encoder.h  drd_rfx_encoder.c  drd_rfx_encoder.h  grdc_encoding_manager.c  grdc_encoding_manager.h  grdc_raw_encoder.c  grdc_raw_encoder.h  grdc_rfx_encoder.c  grdc_rfx_encoder.h
src/input/: AGENTS.md  CLAUDE.md  drd_input_dispatcher.c  drd_input_dispatcher.h  drd_x11_input.c  drd_x11_input.h  grdc_input_dispatcher.c  grdc_input_dispatcher.h  grdc_x11_input.c  grdc_x11_input.h
src/security/: AGENTS.md  drd_local_session.c  drd_nla_sam.c  drd_nla_sam.h  drd_tls_credentials.c  drd_tls_credentials.h  grdc_nla_sam.c  grdc_tls_credentials.c  grdc_tls_credentials.h
src/session/: AGENTS.md  drd_rdp_graphics_pipeline.c  drd_rdp_session.c  drd_rdp_session.h  grdc_rdp_session.c  grdc_rdp_session.h
src/system/: AGENTS.md  drd_handover_daemon.c  drd_handover_daemon.h  drd_system_daemon.c  drd_system_daemon.h
src/transport/: AGENTS.md  drd_rdp_listener.c  drd_rdp_listener.h  drd_rdp_routing_token.c  drd_rdp_routing_token.h  grdc_rdp_listener.c  grdc_rdp_listener.h
src/utils/: AGENTS.md  drd_capture_metrics.c  drd_capture_metrics.h  drd_encoded_frame.c  drd_encoded_frame.h  drd_frame.c  drd_frame.h  drd_frame_queue.c  drd_frame_queue.h  drd_log.c  drd_log.h  drd_system_info.c  drd_system_info.h  grdc_encoded_frame.c  grdc_encoded_frame.h  grdc_frame.c  grdc_frame.h  grdc_frame_queue.c  grdc_frame_queue.h  grdc_log.c  grdc_log.h
